added new code and created new file style.css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+      <div class="container">
+        <div class="first">First</div>
+        <div class="second_one">Second_One</div>
+        <div class="second_two">Second_Two</div>
+        <div class="third_one">Third_One</div>
+        <div class="third_two">Third_Two</div>
+        <div class="third_three">Third_Three</div>
+        <div class="fourth_one">Fourth_One</div>
+        <div class="fourth_two">Fourth_Two</div>
+        <div class="fourth_three">Fourth_Three</div>
+        <div class="fourth_four">Fourth_Four</div>
 </body>
 </html>
