--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-      <div class="container">
-        <div class="first">First</div>
-        <div class="second_one">Second_One</div>
-        <div class="second_two">Second_Two</div>
-        <div class="third_one">Third_One</div>
-        <div class="third_two">Third_Two</div>
-        <div class="third_three">Third_Three</div>
-        <div class="fourth_one">Fourth_One</div>
-        <div class="fourth_two">Fourth_Two</div>
-        <div class="fourth_three">Fourth_Three</div>
-        <div class="fourth_four">Fourth_Four</div>
+    <div class="container">
+        <div class="titlepagename"></div>
+        <div class="navbar"></div>
+        <div class="paragrpah1"></div>
+        <div class="image1"></div>
+        <div class="footer"> </div>
 </body>
 </html>
