Added names into the divclass sections so it can appear on live server

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="titlepagename"></div>
-        <div class="navbar"></div>
-        <div class="paragrpah1"></div>
-        <div class="image1"></div>
-        <div class="footer"> </div>
+        <div class="titlepagename">Title Page Name</div>
+        <div class="navbar">Navigation bar</div>
+        <div class="paragrpah1">Paragraph 1</div>
+        <div class="image1">Image 1</div>
+        <div class="footer">Footer</div>
 </body>
 </html>
