changes title name in html and grid template columns

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title Page Name</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="titlepagename">Title Page Name</div>
+        <div class="titlepagename">
+          <h1>Title Page Name</h1>
+        </div>
         <div class="navbar">Navigation bar</div>
-        <div class="paragrpah1">Paragraph 1</div>
+        <div class="paragraph1">Paragraph 1</div>
         <div class="image1">Image 1</div>
         <div class="footer">Footer</div>
 </body>
