--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
           <h1>Title Page Name</h1>
         </div>
         <div class="navbar">Navigation bar</div>
-        <div class="paragraph1">Paragraph 1</div>
-        <div class="image1">Image 1</div>
+        <div class="paragraph1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
+        </div>
+        <div class="image1">
+          <img src="images/computers.jpg" alt="image of two computers">
+        </div>
         <div class="footer">Footer</div>
 </body>
 </html>
