--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <div class="paragraph1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
+        <h2>Interesting Facts</h2>
+        <ul>
+          <li>Something</li>
+          <li>Something</li>
+          <li>Something</li>
+          <li>Something</li>
+          <li>Something</li>
+        </ul>
         </div>
         <div class="image1">
           <img src="images/computers.jpg" alt="image of two computers">
         </div>
-        <div class="footer">Footer</div>
+        <div class="footer">Copyright 'Atonio Hiko 2024</div>
 </body>
 </html>
