--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         </div>
 
 
-        <div class="navbar">Navigation bar</div>
+        <div class="navbar">
+          <ul>
+                <li><a href="#">Homepage</a></li>
+                <li><a href="#"></a>Page 1</a></li>
+                <li><a href="#"></a>Page 2</a></li>
+                <li><a href="#"></a>Page 3</a></li>
+          </ul>
+        </div>
 
         <div class="paragraph1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
