--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <div class="navbar">
           <ul>
-                <li><a href="#">Homepage</a></li>
-                <li><a href="#"></a>Page 1</a></li>
-                <li><a href="#"></a>Page 2</a></li>
-                <li><a href="#"></a>Page 3</a></li>
+                <a href="#"><li>Homepage</li></a>
+                <a href="#"><li>Page 1</li></a>
+                <a href="#"><li>Page 2</li></a>
+                <a href="#"><li>Page 3</li></a>
           </ul>
         </div>
 
