added comment about padding and margin code in html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="container">
+
+<!--Padding creates extra space within an element, while margin creates extra space around an element!-->
+
+
         <div class="titlepagename">
           <h1>Title Page Name</h1>
         </div>
