added contact us link into html and changed names of links

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <div class="navbar">
           <ul>
                 <a href="#"><li>Homepage</li></a>
-                <a href="#"><li>Page 1</li></a>
-                <a href="#"><li>Page 2</li></a>
-                <a href="#"><li>Page 3</li></a>
+                <a href="#"><li>Positives</li></a>
+                <a href="#"><li>Negatives</li></a>
+                <a href="#"><li>Mitigate</li></a>
+                <a href="#"><li>Contact Us</li></a>
           </ul>
         </div>
 
