--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </div>
 
         <div class="paragraph1">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe.</p>
+        <h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus minima non sit est aspernatur impedit saepe perspiciatis quisquam hic, error ratione nam, facere delectus eveniet. Adipisci iure maiores impedit obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, asperiores quis? Illo eveniet corrupti quos, inventore assumenda unde voluptatibus minus eum neque fugiat rerum. Delectus mollitia magni nam officia rem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloremque iste quia dolores minus sit hic ex voluptate officia voluptates reprehenderit harum tenetur qui aperiam nostrum, quod rem similique saepe. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis incidunt odit vitae autem illo architecto quia, delectus, laboriosam tempore dolore fuga dolor fugit. Omnis corporis quia rerum praesentium provident voluptates. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi esse quam architecto numquam, odio tempora accusamus, amet incidunt, suscipit quos autem obcaecati ut illum rem ea a asperiores culpa libero?</p></h3>
         </div>
 
 
         <div class="image1">
-          <img src="images/computers.jpg" alt="image of two computers" height="400px" width="600px">
+          <img src="images/computers.jpg" alt="image of two computers" width="100%">
         </div>
 
       
-        <div class="footer">Copyright 'Atonio Hiko 2024</div>
+        <div class="footer">Copyright  'Atonio Hiko 2024</div>
 </body>
 </html>
