--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <div class="navbar">
           <ul>
-                <a href="#"><li>Homepage</li></a>
-                <a href="#"><li>Positives</li></a>
+                <a href="index.html"><li>Homepage</li></a>
+                <a href="positives.html"><li>Positives</li></a>
                 <a href="#"><li>Negatives</li></a>
                 <a href="#"><li>Mitigate</li></a>
                 <a href="#"><li>Contact Us</li></a>
