added negative.html into a href tags in both index&positiveshtml

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
                 <a href="index.html"><li>Homepage</li></a>
                 <a href="positives.html"><li>Positives</li></a>
-                <a href="#"><li>Negatives</li></a>
+                <a href="negatives.html"><li>Negatives</li></a>
                 <a href="#"><li>Mitigate</li></a>
                 <a href="#"><li>Contact Us</li></a>
           </ul>
