--- a/positives.html
+++ b/positives.html
@@ -21,7 +21,7 @@
                 <a href="index.html"><li>Homepage</li></a>
                 <a href="positives.html"><li>Positives</li></a>
                 <a href="negatives.html"><li>Negatives</li></a>
-                <a href="#"><li>Mitigate</li></a>
+                <a href="mitigate.html"><li>Mitigate</li></a>
                 <a href="#"><li>Contact Us</li></a>
           </ul>
         </div>
