added code into a href tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="positives.html"><li>Positives</li></a>
                 <a href="negatives.html"><li>Negatives</li></a>
                 <a href="mitigate.html"><li>Mitigate</li></a>
-                <a href="#"><li>Contact Us</li></a>
+                <a href="contactpage.html"><li>Contact Us</li></a>
           </ul>
         </div>
 
