put in a contact form, just testing

--- a/contactpage.html
+++ b/contactpage.html
@@ -25,7 +25,17 @@
           <a href="contactpage.html"><li>Contact Us</li></a>
     </ul>
   </div>
+
   
+  <div class="contactform">
+  <input type="text" name="first" placeholder="first name" autocomplete="off" required>
+  <input type="text" name="last" placeholder="last name" autocomplete="off" required>
+  <input type="text" name="email" placeholder="Email Address" autocomplete="off" required>
+  <textarea rows="5" cols="60" name="Enter Text" autocomplete="off" required></textarea>
+  <button type="submit">Send Message</button>
+  </div>
+
+
   
   <div class="footer">Copyright  'Atonio Hiko 2024</div>          
 </body>
