changes in code in contactpage html&css. I am only testing, building my knowledge and trying to get used to creating contact forms

--- a/contactpage.html
+++ b/contactpage.html
@@ -3,40 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us   |  Title Page Name</title>
-    <link rel="stylesheet" href="contactpage.css">
+    <link rel="stylesheet" href="./contactpage.css">
 </head>
 <body>
-    <div class="container">
-
-<!--Padding creates extra space within an element, while margin creates extra space around an element!-->
+  
+        <h1>Contact Page</h1>  
+          <input type="text" name="first" placeholder="first name" autocomplete="off" required>
+          <input type="text" name="last" placeholder="last name" autocomplete="off" required>
+          <input type="text" name="email" placeholder="Email Address" autocomplete="off" required>
+          <textarea rows="5" cols="60" name="Enter Text" autocomplete="off" required></textarea>
+          <button type="submit">Send Message</button>
         
-        
-    <div class="titlepagename">
-        <h1>Title Page Name</h1>
-    </div>
-  
-  
-  <div class="navbar">
-    <ul>
-          <a href="index.html"><li>Homepage</li></a>
-          <a href="positives.html"><li>Positives</li></a>
-          <a href="negatives.html"><li>Negatives</li></a>
-          <a href="mitigate.html"><li>Mitigate</li></a>
-          <a href="contactpage.html"><li>Contact Us</li></a>
-    </ul>
-  </div>
-
-  
-  <div class="contactform">
-  <input type="text" name="first" placeholder="first name" autocomplete="off" required>
-  <input type="text" name="last" placeholder="last name" autocomplete="off" required>
-  <input type="text" name="email" placeholder="Email Address" autocomplete="off" required>
-  <textarea rows="5" cols="60" name="Enter Text" autocomplete="off" required></textarea>
-  <button type="submit">Send Message</button>
-  </div>
-
-
-  
-  <div class="footer">Copyright  'Atonio Hiko 2024</div>          
 </body>
 </html>
