--- a/contactpage.html
+++ b/contactpage.html
@@ -26,14 +26,18 @@
   </div>
 
 
-  <div class="contactform">
-  <input type="text" name="first" placeholder="first name" autocomplete="off" required>
-  <input type="text" name="last" placeholder="last name" autocomplete="off" required>
-  <input type="text" name="email" placeholder="Email Address" autocomplete="off" required>
-  <textarea rows="5" cols="60" name="Enter Text" autocomplete="off" required></textarea>
-  <button type="submit">Send Message</button>
+  <div class="contact-container">
+        <form action="" class="contact-left">
+          <h2>Get in Touch</h2>
+          <hr>
+        </div>
+        <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+        <input type="text" name="email" placeholder="Your Email" class="contact-inputs" required>
+        <input type="text" name="message" placeholder="Your message" class="contact-inputs" required>
+        <button type="submit">submit</button> 
+      </form>
+      <div class="contact-right">
   </div>
-
 
 
   <div class="footer">Copyright  'Atonio Hiko 2024</div>          
