--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="navbar">
           <ul>
-                <a href="index.html"><li>Homepage</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="positives.html"><li>Positives</li></a>
                 <a href="negatives.html"><li>Negatives</li></a>
                 <a href="mitigate.html"><li>Mitigate</li></a>
