these changes are minor and don't hold significance towards the development of my website

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
         <div class="titlepagename">
-          <h1>Page Name</h1>
+          <h1>Title Page Name</h1>
         </div>
 
 
         <div class="navbar">
           <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="index.html"><li>Homepage</li></a>
                 <a href="positives.html"><li>Positives</li></a>
                 <a href="negatives.html"><li>Negatives</li></a>
                 <a href="mitigate.html"><li>Mitigate</li></a>
