made a comment and a few minor changes

--- a/contactpage.html
+++ b/contactpage.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Contact Us   |   Title Page Name</title>
+  <link rel="stylesheet" href="contactpage.css">
 </head>
 <body>
   
@@ -18,8 +19,13 @@
         <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
         <button type="submit">Submit</button> 
       </form>
+
+<!-- The div class for contact-right is for images on the contact us page. once I am able to combine the contact form with my website design (e.g., the index.html website design), I will put in some images to make the page look better -->
+ 
       <div class="contact-right">
+
     </div>
+  </div>
 
 
 </body>
