--- a/contactpage.html
+++ b/contactpage.html
@@ -7,7 +7,16 @@
 </head>
 <body>
   
-  
+  <div class="navbar">
+    <ul>
+          <a href="index.html"><li>Homepage</li></a>
+          <a href="positives.html"><li>Positives</li></a>
+          <a href="negatives.html"><li>Negatives</li></a>
+          <a href="mitigate.html"><li>Mitigate</li></a>
+          <a href="contactpage.html"><li>Contact Us</li></a>
+    </ul>
+  </div>
+
     <div class="contact-container">
       <form action="" class="contact-left">
         <div class="contact-left-title">
@@ -21,7 +30,7 @@
       </form>
 
 <!-- The div class for contact-right is for images on the contact us page. once I am able to combine the contact form with my website design (e.g., the index.html website design), I will put in some images to make the page look better -->
- 
+
       <div class="contact-right">
 
     </div>
