--- a/contactpage.html
+++ b/contactpage.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   
+  <div class="titlepagename">
+    <h1>Title Page Name</h1>
+  </div>
+
+
   <div class="navbar">
     <ul>
           <a href="index.html"><li>Homepage</li></a>
