--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
         
 
         <div class="image1">
-          <img src="images/computers.jpg" alt="image of two computers" width="100%" height="100%">
+          <img src="images/computers.jpg" alt="image of two computers" width="90%" height="100%">
           <div class="text">
-            <p>Welcome</p>
+            <p>
+              <h2>Welcome</h2><br>
+
+            </p>
           </div>
         </div>
 
+        <div class="websitesummary">
+          <p>This website has been designed to increase students of ASDAH awareness about the effects of using technologies in the classroom and how to mitigate the negative effects. </p>
+          <p>If you would like to ask questions or contact us, feel free to head to the Contact Us Page</p>
+        </div>
       
         <div class="footer">Copyright  'Atonio Hiko 2024</div>
 </body>
