changing the website design layout

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
           <img src="images/computers.jpg" alt="image of two computers" width="100%" height="100%">
           <div class="text">
             <h1>Welcome</h1>
-          <div class="websitesummary"><h11>
+          <div class="websitesummary">
             <p>This website has been designed to increase students of ASDAH awareness about the effects of using technologies in the classroom and how to mitigate the negative effects. </p>
-            <p>If you would like to ask questions or contact us, feel free to head to the Contact Us Page</p>
-          </h11></div>
+            <p>If you would like to ask questions or contact us, feel free to head to the Contact Us Page</p></div>
           </div>
         </div>
 
