Finally managed to integrate the title and navigation bar into the contact page html and css. also changed color of all the backgrounds

--- a/contactpage.html
+++ b/contactpage.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   
+  <div class="container">
+
   <div class="titlepagename">
     <h1>Title Page Name</h1>
   </div>
@@ -21,7 +23,7 @@
           <a href="contactpage.html"><li>Contact Us</li></a>
     </ul>
   </div>
-
+</div>
     <div class="contact-container">
       <form action="" class="contact-left">
         <div class="contact-left-title">
