lengthened the text in the homepage and added some background color to the image container. also added opacity onto image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="paragraph1">
-          <p>This website has been designed to increase students of ASDAH awareness about the effects of using technologies in the classroom and how to mitigate the negative effects. </p>
-          <p>If you would like to ask questions or contact us, feel free to head to the Contact Us Page</p>
+          <p>This website is designed to help ASDAH students understand how technology affects learning in the classroom. We want to highlight the positive aspects and the downsides of using technology in classroom learning. Our goal is to present students with helpful tips and insights that will help them deal with these problems and minimize the negative impact on their learning experience. </p>
+          <p>If you have any questions or would want to learn more, please contact us. We invite you to visit our Contact Us page, where you can find many different ways to get in touch. Your feedback and questions are welcome, as we aim to create a supportive and informative space for everyone.</p>
         </div>
 
 
