many changes made but were unable to commit them seperately because of errors. added videos into positive,negative and mitigate html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Page Name</title>
+    <title>Home   |   ASDAH and Technology: Navigating Challenges and Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +13,14 @@
 
 
         <div class="titlepagename">
-          <h1>Title Page Name</h1>
+          <h1>ASDAH and Technology: </h1>
+          <h3>Navigating Challenges and Solutions</h3>
         </div>
 
 
         <div class="navbar">
           <ul>
-                <a href="index.html"><li>Homepage</li></a>
+                <a href="index.html"><li>Home</li></a>
                 <a href="positives.html"><li>Positives</li></a>
                 <a href="negatives.html"><li>Negatives</li></a>
                 <a href="mitigate.html"><li>Mitigate</li></a>
@@ -28,8 +29,8 @@
         </div>
 
         <div class="paragraph1">
-          <p>This website is designed to help ASDAH students understand how technology affects learning in the classroom. We want to highlight the positive aspects and the downsides of using technology in classroom learning. Our goal is to present students with helpful tips and insights that will help them deal with these problems and minimize the negative impact on their learning experience. </p>
-          <p>If you have any questions or would want to learn more, please contact us. We invite you to visit our Contact Us page, where you can find many different ways to get in touch. Your feedback and questions are welcome, as we aim to create a supportive and informative space for everyone.</p>
+          <p>This website is designed to help ASDAH students understand how technology affects learning in the classroom. It highlights both the positive aspects and the downsides of using technology in learning environments.</p>
+          <p>If you have any questions or would like to learn more, please contact us through the <a href="contactpage.html">Contact Us</a> page. Your feedback and questions are welcome as we aim to create a supportive and informative space for everyone.</p>
         </div>
 
 
@@ -38,6 +39,7 @@
         </div>
 
       
-        <div class="footer">Copyright  'Atonio Hiko 2024</div>
+        <div class="footer"><p>&copy; Atonio Hiko 2024</p>
+        </div>
 </body>
 </html>
