--- a/contactpage.html
+++ b/contactpage.html
@@ -2,21 +2,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us   |   Title Page Name</title>
+  <title>Contact Us   |   ASDAH and Technology: Navigating Challenges and Solutions</title>
   <link rel="stylesheet" href="contactpage.css">
 </head>
 <body>
   
   <div class="container">
 
-  <div class="titlepagename">
-    <h1>Title Page Name</h1>
-  </div>
+    <div class="titlepagename">
+      <h1>ASDAH and Technology: </h1>
+      <h3>Navigating Challenges and Solutions</h3>
+    </div>
 
 
   <div class="navbar">
     <ul>
-          <a href="index.html"><li>Homepage</li></a>
+          <a href="index.html"><li>Home</li></a>
           <a href="positives.html"><li>Positives</li></a>
           <a href="negatives.html"><li>Negatives</li></a>
           <a href="mitigate.html"><li>Mitigate</li></a>
@@ -24,25 +25,36 @@
     </ul>
   </div>
 </div>
+
+
     <div class="contact-container">
-      <form action="" class="contact-left">
+
+      <div class="contact-background">
+      <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
         <div class="contact-left-title">
             <h2>Get in Touch</h2>
             <hr>
         </div>
+        <input type="hidden" name="access_key" value="bdab6c27-8fd2-462d-bf62-bc67b464f947">
         <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
         <input type="text" name="email" placeholder="Your Email" class="contact-inputs" required>
         <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
         <button type="submit">Submit</button> 
       </form>
-
+    </div>
 <!-- The div class for contact-right is for images on the contact us page. once I am able to combine the contact form with my website design (e.g., the index.html website design), I will put in some images to make the page look better -->
 
       <div class="contact-right">
-
+        <h1>Contact Us</h1>
+        We would love to hear from you! If you have any questions, comments, or suggestions, please contact us by filling out the form.
     </div>
+
+    
+
   </div>
 
+  <div class="footer"><p>&copy; Atonio Hiko 2024</p>
+  </div>
 
 </body>
 </html>
