added a reference list to some pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="paragraph1">
-          <p>This website is designed to help ASDAH students understand how technology affects learning in the classroom. It highlights both the positive aspects and the downsides of using technology in learning environments.</p>
+          <p>This website is designed to help ASDAH students understand how technology affects learning in the classroom. It highlights both the positive aspects, the downsides of using technology in learning environments and more.</p>
           <p>If you have any questions or would like to learn more, please contact us through the <a href="contactpage.html">Contact Us</a> page. Your feedback and questions are welcome as we aim to create a supportive and informative space for everyone.</p>
         </div>
 
