--- a/mitigate.html
+++ b/mitigate.html
@@ -35,6 +35,34 @@
     <p>Teachers do not move around the classroom for monitoring purposes. Movement equals accountability. If a student is unaware that I may walk past them while teaching, they are less likely to be off task. A teacher moving around not only keeps the student from having a glazed over expression since their focus can shift, but it can also give the shy student a voice because the teacher’s proximity to them gives them the courage to speak (Davis, 2015).</p>
 
     <p>Desk placement significantly impacts your ability to monitor and ensure your students are on track. If your students are working in groups, arrange their desks near together and in small groups so that you can easily observe all devices as you move around (Davis, 2015).</p>
+    
+    <body>
+      <div class="reference"></div>
+      <hr>
+    <h2>References</h2>
+    <hr>
+    <ol>
+      <li>
+        Davis, J. (2015, February 19). <i>Classroom Management Tips for a Technology-Rich Classroom</i>. 
+        Retrieved from <a href="https://www.edutopia.org/discussion/classroom-management-tips-technology-rich-classroom" 
+        target="_blank" rel="">
+        https://www.edutopia.org/discussion/classroom-management-tips-technology-rich-classroom</a>.
+      </li>
+      <li>
+        Schnobrich, J. (2018, January 19). <i>Person Using Laptop</i>. 
+        Retrieved from <a href="https://unsplash.com/photos/person-using-laptop-FlPc9_VocJ4" 
+        target="_blank" rel="">
+        https://unsplash.com/photos/person-using-laptop-FlPc9_VocJ4</a>.
+      </li>
+      <li>
+        Prodigy Education. (2017, June 7). <i>Technology in the Classroom | Prodigy Game </i> [Video]. YouTube. 
+        Retrieved from <a href="https://www.youtube.com/watch?v=Z6pgnnsz-cs" 
+        target="_blank" rel="">
+        https://www.youtube.com/watch?v=Z6pgnnsz-cs</a>.
+      </li>
+    </ol>
+  </body>
+
   </div>
   
   
