--- a/negatives.html
+++ b/negatives.html
@@ -44,6 +44,40 @@
 
     <h3>Less direct social interaction:</h3>
     <p>Another source of concern is how technology excises social interaction. When students use technology, they have less need to verbally communicate with their teachers and each other. Online teaching and learning excludes face-to-face interaction (Educators, 2022b). </p>
+
+    <body>
+      <div class="reference"></div>
+      <hr>
+    <h2>References</h2>
+    <hr>
+    <ol>
+    <li>
+      DMahbub. (2023, August 9). <i>Pros and Cons of Digital Society</i>. 
+      Retrieved from <a href="https://digitalmahbub.com/pros-and-cons-of-digital-society/" 
+      target="_blank" rel="">
+      https://digitalmahbub.com/pros-and-cons-of-digital-society/</a>.
+    </li>
+    <li>
+      Educators, F. (2022, September 20).  <i>Technology in Classrooms: Pros and Cons</i>. 
+      Retrieved from <a href="https://www.futureeducators.org/technology-in-classrooms-pros-cons/" 
+      target="_blank" rel="">
+      https://www.futureeducators.org/technology-in-classrooms-pros-cons/</a>.
+    </li>
+    <li>
+      Gouw, T. (2016, February 25). <i>Man Wearing White Top Using MacBook</i>. 
+      Retrieved from <a href="https://unsplash.com/photos/man-wearing-white-top-using-macbook-1K9T5YiZ2WU" 
+      target="_blank" rel="">
+      https://unsplash.com/photos/man-wearing-white-top-using-macbook-1K9T5YiZ2WU</a>.
+    </li>
+    <li>
+      TEDx Talks. (2019, October 21). <i>Technology, The best or worst thing for education | Scott Widman | TEDxYouth@BSPR </i> [Video]. YouTube. 
+      Retrieved from <a href="https://www.youtube.com/watch?v=9IbN1LxXevM" 
+      target="_blank" rel="">
+      https://www.youtube.com/watch?v=9IbN1LxXevM</a>.
+    </li>
+  </ol>
+ </body>
+    
   </div>
   
   
