--- a/positives.html
+++ b/positives.html
@@ -47,6 +47,41 @@
 
           <h3>Connects Students with Their Teachers</h3>
           <p>Technology can help teachers build a better relationship with their students and colleagues. For example, 84% of teachers report saying they use the internet at least once weekly to discover engaging content for their students. Integrating technology into your lesson planning and using it to expand your own knowledge of the subject can make a major difference in the classroom. Technology will undoubtedly continue to evolve, and it is important you adjust your classroom style to align with the latest advancements (Walden University, 2023).</p>
+
+          <body>
+            <div class="reference"></div>
+            <hr>
+          <h2>References</h2>
+          <hr>
+            <ol>
+              <li>
+                Grand Canyon University. (n.d.). <i>How Using Technology in Teaching Affects Classrooms</i>. 
+                Retrieved from <a href="https://www.gcu.edu/blog/teaching-school-administration/how-using-technology-teaching-affects-classrooms" 
+                target="_blank" rel="">
+                https://www.gcu.edu/blog/teaching-school-administration/how-using-technology-teaching-affects-classrooms</a>.
+              </li>
+              <li>
+                Walden University. (n.d.). <i>Top Five Benefits of Technology in the Classroom</i>. 
+                Retrieved from <a href="https://www.waldenu.edu/programs/education/resource/top-five-benefits-of-technology-in-the-classroom" 
+                target="_blank" rel="">
+                https://www.waldenu.edu/programs/education/resource/top-five-benefits-of-technology-in-the-classroom</a>.
+              </li>
+              <li>
+                Pexels. (n.d.). <i>Close-up Photo of Programming of Codes</i>. 
+                Retrieved from <a href="https://www.pexels.com/photo/close-up-photo-of-programming-of-codes-546819/" 
+                target="_blank" rel="">
+                https://www.pexels.com/photo/close-up-photo-of-programming-of-codes-546819/</a>.
+              </li>
+              <li>
+                simpleshow foundation. (2018, May 18). <i>Using technology in the classroom</i> [Video]. YouTube. 
+                Retrieved from <a href="https://www.youtube.com/watch?v=ug_LK98NcVk" 
+                target="_blank" rel="">
+                https://www.youtube.com/watch?v=ug_LK98NcVk</a>.
+              </li>
+            </ol>
+          </body>
+
+
         </div>
         
         
