made changes to pass testing html results

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <div class="navbar">
           <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="positives.html"><li>Positives</li></a>
-                <a href="negatives.html"><li>Negatives</li></a>
-                <a href="mitigate.html"><li>Mitigate</li></a>
-                <a href="contactpage.html"><li>Contact Us</li></a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="positives.html">Positives</a></li>
+                <li><a href="negatives.html">Negatives</a></li>
+                <li><a href="mitigate.html">Mitigate</a></li>
+                <li><a href="contactpage.html">Contact Us</a></li>
           </ul>
         </div>
 
@@ -35,11 +35,12 @@
 
 
         <div class="image1">
-          <img src="images/computers.jpg" alt="image of two computers" width="100%">
+          <img src="images/computers.jpg" alt="image of two computers">
         </div>
 
       
         <div class="footer"><p>&copy; Atonio Hiko 2024</p>
         </div>
+      </div>
 </body>
 </html>
