--- a/contactpage.html
+++ b/contactpage.html
@@ -15,17 +15,17 @@
       <h1>ASDAH and Technology: </h1>
       <h3>Navigating Challenges and Solutions</h3>
     </div>
-
-
-  <div class="navbar">
-    <ul>
-          <a href="index.html"><li>Home</li></a>
-          <a href="positives.html"><li>Positives</li></a>
-          <a href="negatives.html"><li>Negatives</li></a>
-          <a href="mitigate.html"><li>Mitigate</li></a>
-          <a href="contactpage.html"><li>Contact Us</li></a>
-    </ul>
-  </div>
+    
+    
+    <div class="navbar">
+      <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="positives.html">Positives</a></li>
+            <li><a href="negatives.html">Negatives</a></li>
+            <li><a href="mitigate.html">Mitigate</a></li>
+            <li><a href="contactpage.html">Contact Us</a></li>
+      </ul>
+    </div>
 </div>
 
 
