made more cahnges using w3c validation for both html and css files

--- a/negatives.html
+++ b/negatives.html
@@ -47,8 +47,8 @@
     <h3>Less direct social interaction:</h3>
     <p>Another source of concern is how technology excises social interaction. When students use technology, they have less need to verbally communicate with their teachers and each other. Online teaching and learning excludes face-to-face interaction (Educators, 2022b). </p>
 
-    <body>
-      <div class="reference"></div>
+  
+      <div class="reference">
       <hr>
     <h2>References</h2>
     <hr>
@@ -78,18 +78,20 @@
       https://www.youtube.com/watch?v=9IbN1LxXevM</a>.
     </li>
   </ol>
- </body>
-    
+ 
+    </div>  
   </div>
   
   
   <div class="image1">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9IbN1LxXevM?si=bUPgUFG7iCNlCR3V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9IbN1LxXevM?si=bUPgUFG7iCNlCR3V" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <img src="images/techinclass.jpg" alt="Classroom Technology" style="max-width:100%; border-radius: 10px;">
   </div>
   
         
-  <div class="footer"><p>&copy; Atonio Hiko 2024</p></div>          
+  <div class="footer"><p>&copy; Atonio Hiko 2024</p></div>      
+  
+</div>
 </body>
 </html>
