--- a/positives.html
+++ b/positives.html
@@ -51,7 +51,7 @@
           <p>Technology can help teachers build a better relationship with their students and colleagues. For example, 84% of teachers report saying they use the internet at least once weekly to discover engaging content for their students. Integrating technology into your lesson planning and using it to expand your own knowledge of the subject can make a major difference in the classroom. Technology will undoubtedly continue to evolve, and it is important you adjust your classroom style to align with the latest advancements (Walden University, 2023).</p>
 
 
-            <div class="reference"></div>
+            <div class="reference">
             <hr>
           <h2>References</h2>
           <hr>
@@ -82,7 +82,7 @@
               </li>
             </ol>
 
-
+          </div>
         </div>
         
         
